[why] patch for collapseBooleanAttributes

--- a/webpack/entry-template.pug
+++ b/webpack/entry-template.pug
@@ -12,6 +12,7 @@ html(lang="en")
   body
     p hash #{webpack.hash}
     div#app
+    input(type='checkbox' checked)
     pre#msg
     script 
       |window.htmlWebpackPlugin = !{JSON.stringify(htmlWebpackPlugin,null,4)}
